Tabs: Fix flex-basis in Material && Add row-gap in Generic

--- a/packages/devextreme/scss/widgets/generic/tabs/layout/tab/_base.scss
+++ b/packages/devextreme/scss/widgets/generic/tabs/layout/tab/_base.scss
@@ -86,6 +86,7 @@
 
   .dx-tab-text {
     column-gap: $generic-tabs-icon-margin;
+    row-gap: $generic-tabs-item-gap;
     color: $tabs-tab-color;
     line-height: $generic-tab-text-line-height;
 
